--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,52 +1,19 @@
-
-  <section class="container-fluid">
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Flow</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Home</a></li>
-        <li><a ng-href="#">Profile</a></li>
-        <li><a ng-href="#">Timeline</a></li>
-        <li><a ng-href="#">About</a></li>
-      </ul>
-
-      <div class="navbar-form navbar-right container-fluid" role="search">
-        <form>
-          <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Username">
-            <input type="checkbox">Remember me
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="password" placeholder="Password">
-            <a href="">Forgot your password?</a>
-          </div>
-          <button type="submit" class="btn btn-success">Sign In</button>
-        </form>
-      </div>
-    </div><!--/.nav-collapse -->
-  </div>
+<section class="container-fluid">
+  <ng-include src="header()"></ng-include>
 </section>
 
-<section class="container-fluid" id="main-content">
-  <div class="col-sm-6">
+<section class="container-fluid row" id="main-content">
+  <div class="col-sm-5">
     <div class="row">
       <h3>What is Flow?</h3>
     </div>
     <div class="row">
       <div fit-vids>
-                <iframe width="425" height="349" src="http://www.youtube.com/embed/FKWwdQu6_ok" frameborder="0" allowfullscreen></iframe>
+        <iframe width="425" height="349" src="http://www.youtube.com/embed/FKWwdQu6_ok" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-5 col-sm-offset-2">
     <div class="row">
       <div class="col-xs-12"><h3>Sign Up</h3></div>
     </div>
@@ -63,26 +30,80 @@
           </div>
           <div class="input-group">
             <span class="input-group-addon"><i class="icon-asterisk icon-2x"></i></span>
-            <select class="form-control input-lg" required="required" ng-cloak ng-repeat="level in eduLevels">
-              <option value="{{level}}">{{level}}</option>
+            <select class="form-control input-lg" required="required">
+              <option value="">-- Education Level --</option>
+              <option ng-cloak ng-repeat="level in eduLevels" value="{{level}}">{{level}}</option>
             </select>
           </div>
           <div class="form-group">
-            <button type="submit" id="btn-signup" class="btn btn-block btn-lg">Sign Up</button>
+            <button type="submit" id="btn-signup" class="btn btn-block btn-lg">Let's Flow!</button>
           </div>
         </form>
-        <div class="form-group">
-          <div class="topCushion">Already a member? <a href="#login">Login</a></div>
-        </div>
-        <div class="form-group">
-          <p>By clicking on "Sign Up", you agree to the <a href="#terms-of-service" target="_blank">Terms of Service</a> and the <a href="#privacy" target="_blank">Privacy Policy</a>.</p>
-        </div>
+        
       </div><!-- end of column -->
     </div><!-- end of row -->
   </div><!-- end of column 2 -->
 </section>
 
-<section class="footer">
-  <p>© 2014 IS306 Diverse Team. All rights reserved.</p>
+<!-- About Section -->
+<section class="success" id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Why Flow?</h2>
+        <hr class="star-light">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <legend>
+          <h3>Adapative Learning</h3>
+        </legend>
+        <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
+      </div>
+      <div class="col-lg-6">
+        <legend>
+          <h3>Recommendation Engine</h3>
+        </legend>
+        <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
+      </div>
+    </div>
+  </div>
 </section>
+
+<!--SEPARATOR-->
+<section class="separator default">
+  <div class="container-fluid">
+     <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Get Notified</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-sm-5 col-sm-offset-1">
+        <div class="descSubscribe">
+          <i class="fui-mail"></i>
+          <h3>Please sign-up for our newsletter</h3>
+          <p>Receiving tips and tricks to help you study better with Flow and rock your next exam</p>
+          </div>
+        </div>
+        <div class="col-sm-5">
+          <div class="subscribe">
+            <div class="control-group">
+              <input type="text" class="form-control" style="width: 50%; display: inline;" placeholder="Your E-mail"
+              id="EmailSubs">
+              <button
+              class="btn" style="background-color: #2C3E50; color: white;" style="display: inline;">Subscribe</button>
+            </div>
+          </div>
+          <span id="sub-thanks"></span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container-fluid" id="bottom-section">
+    <ng-include src="footer()"></ng-include>
+  </section>
 
