--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -39,28 +39,29 @@
 }
 
 /* Carousel */
-#owl-demo .item{
+.owl-carousel .item{
   margin: 3px;
 }
-#owl-demo .item img{
+.owl-carousel .item img{
   display: block;
   width: 100%;
   height: auto;
   cursor: pointer;
 }
 
-#owl-demo .item > h6{
+.owl-carousel .item > h6{
   text-align: center;
 }
 
-#owl-demo .item > p{
+.owl-carousel .item > p{
   text-align: center;
   font-size: 10pt;
 }
 
 #current-studying-header legend,
 #recommended-items-header legend,
-#popular-item-list legend{
+#important-item-list legend,
+#regular-item-list legend {
   font-weight: 700;
 }
 
@@ -80,6 +81,10 @@
     margin-bottom: 5px;
 }
 
+.progresslabel{    
+    min-width:40px;
+}
+
 .glyphicon-lg{font-size:3em}
 .blockquote-box{border-right:5px solid #E6E6E6;margin-bottom:25px}
 .blockquote-box .square{width:100px;min-height:50px;margin-right:22px;text-align:center!important;background-color:#E6E6E6;padding:20px 0}
@@ -93,3 +98,40 @@
 .blockquote-box.blockquote-warning .square{background-color:#F0AD4E;color:#FFF}
 .blockquote-box.blockquote-danger{border-color:#D43F3A}
 .blockquote-box.blockquote-danger .square{background-color:#D9534F;color:#FFF}
+
+/* Display Date */
+.date {
+  vertical-align: baseline;
+  width: 100%; 
+  height: 40px; 
+  background: #fcfcfc; 
+  background: linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+  background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%); 
+  background: -webkit-linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+  border: 1px solid #d2d2d2;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+}
+
+.date p {
+  font-family: Helvetica, sans-serif; 
+  font-size: 20px; text-align: center; color: #9e9e9e; 
+}
+
+.date p span {
+  background: #2C3E50;
+  background: linear-gradient(top, #d10000 0%, #7a0909 100%);
+  background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%);
+  background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%);
+  font-size: 20px; font-weight: bold; color: #fff; text-transform: uppercase;   
+  display: block;
+  border-top: 3px solid #a13838;
+  border-radius: 0 0 10px 10px;
+  -moz-border-radius: 0 0 10px 10px;
+  -webkit-border-radius: 0 0 10px 10px;
+  padding: 6px 0 6px 0;
+}
