--- a/app/views/header.html
+++ b/app/views/header.html
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li class="active"><a ng-href="/">Home</a></li>
-      <li><a ng-href="#">FAQ</a></li>
+      <li><a ng-href="#">Popular</a></li>
       <li><a ng-href="/#/contact-us">Contact Us</a></li>
     </ul>
 
