--- a/app/views/home.html
+++ b/app/views/home.html
@@ -27,10 +27,10 @@
       <div class="jumbotron"></div>
     </div>
 
-    <div class="row" id="popular-item-list">
+    <div class="row" id="important-item-list">
       <div class="col-sm-12">
         <legend>
-          POPULAR ITEMS
+          IMPORTANT ITEMS
           <!-- Standard button -->
           <button type="button" class="btn btn-default popular-subject active">All</button>
           <!-- Standard button -->
@@ -44,7 +44,7 @@
     </div>
 
     <div class="row">
-      <div id="owl-demo" class="owl-carousel">
+      <div class="owl-carousel">
         <div class="item">
           <img class="lazyOwl" data-src="/images/owl1.jpg" alt="Lazy Owl Image">
           <h6>Unit Name</h6>
@@ -74,74 +74,190 @@
 
                     </div>
                   </div>
-                  <div class="row" id="current-studying-header">
+
+                  <div class="row" id="regular-item-list">
                     <div class="col-sm-12">
                       <legend>
-                        CURRENLY STUDYING SUBJECTS
+                        REGULAR ITEMS
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject active">All</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Biology</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Chemistry</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Math</button>
                       </legend>
                     </div>
                   </div>
-                  <div class="row" id="current-studying">
-                    <div class="col-md-6">
-                      <div class="blockquote-box clearfix">
-                        <div class="square pull-left">
-                          <img src="http://placehold.it/60/8e44ad/FFF&text=B" alt="" class="" />
-                        </div>
-                        <h4>
-                          Biology</h4>
-                          <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                            ante.
-                          </p>
-                        </div>
-                        <div class="blockquote-box blockquote-primary clearfix">
-                          <div class="square pull-left">
-                            <span class="glyphicon glyphicon-tint glyphicon-lg"></span>
-                          </div>
-                          <h4>
-                            Chemistry</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                              ante.
-                            </p>
-                          </div>
-                        </div>
-                        <div class="col-md-6">
-                          <div class="blockquote-box blockquote-info clearfix">
-                            <div class="square pull-left">
-                              <span class="glyphicon glyphicon-plus-sign glyphicon-lg"></span>
-                            </div>
-                            <h4>
-                              Math</h4>
-                              <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                                ante.
-                              </p>
-                            </div>
-                          </div>
-                        </div>
+
+                  <div class="row">
+                    <div class="owl-carousel">
+                      <div class="item">
+                        <img class="lazyOwl" data-src="/images/owl1.jpg" alt="Lazy Owl Image">
+                        <h6>Unit Name</h6>
+                        <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
                       </div>
-                      <div class="col-sm-3" id="right-sidebar">
-                        <div class="row" id="recommended-items-header">
-                    <div class="col-sm-12">
-                      <legend>
-                        RECOMMENDED ITEMS
-                      </legend>
-                    </div>
-                  </div>
+                      <div class="item"><img class="lazyOwl" data-src="/images/owl2.jpg" alt="Lazy Owl Image">
+                        <h6>Unit Name</h6>
+                        <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                        <div class="item"><img class="lazyOwl" data-src="/images/owl3.jpg" alt="Lazy Owl Image">
+                          <h6>Unit Name</h6>
+                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                          <div class="item"><img class="lazyOwl" data-src="/images/owl4.jpg" alt="Lazy Owl Image">
+                            <h6>Unit Name</h6>
+                            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                            <div class="item"><img class="lazyOwl" data-src="/images/owl5.jpg" alt="Lazy Owl Image">
+                              <h6>Unit Name</h6>
+                              <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                              <div class="item"><img class="lazyOwl" data-src="/images/owl6.jpg" alt="Lazy Owl Image">
+                                <h6>Unit Name</h6>
+                                <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                                <div class="item"><img class="lazyOwl" data-src="/images/owl7.jpg" alt="Lazy Owl Image">
+                                  <h6>Unit Name</h6>
+                                  <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+                                  <div class="item"><img class="lazyOwl" data-src="/images/owl8.jpg" alt="Lazy Owl Image">
+                                    <h6>Unit Name</h6>
+                                    <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p></div>
+
+                                  </div>
+                                </div>
+                                <div class="row" id="current-studying-header">
+                                  <div class="col-sm-12">
+                                    <legend>
+                                      CURRENLY STUDYING SUBJECTS
+                                    </legend>
+                                  </div>
+                                </div>
+                                <div class="row" id="current-studying">
+                                  <div class="col-sm-6">
+                                    <div class="blockquote-box clearfix">
+                                      <div class="square pull-left">
+                                        <img src="http://placehold.it/60/8e44ad/FFF&text=B" alt="" class="" />
+                                      </div>
+                                      <h4>
+                                        Biology</h4>
+                                        <p>
+                                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                          ante.
+                                        </p>
+                                      </div>
+                                      <div class="blockquote-box blockquote-primary clearfix">
+                                        <div class="square pull-left">
+                                          <span class="glyphicon glyphicon-tint glyphicon-lg"></span>
+                                        </div>
+                                        <h4>
+                                          Chemistry</h4>
+                                          <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                            ante.
+                                          </p>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-6">
+                                        <div class="blockquote-box blockquote-info clearfix">
+                                          <div class="square pull-left">
+                                            <span class="glyphicon glyphicon-plus-sign glyphicon-lg"></span>
+                                          </div>
+                                          <h4>
+                                            Math</h4>
+                                            <p>
+                                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                              ante.
+                                            </p>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="col-sm-3" id="right-sidebar">
+                                      <div class="row" id="recommended-items-header">
+                                        <div class="col-sm-12">
+                                          <legend>
+                                            DEADLINES <button class="btn btn-info" ng-click="showModal = true">Add <span class="glyphicon glyphicon-plus"></span></button>
+                                          </legend>
+                                        </div>
+                                      </div>
                         <!--
                         <div>
                           <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
                         </div>
-                        -->
+                      -->
 
-                        <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
-                          <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
+                      <div class="row">
+                        <div class="col-sm-12">
+                          You have no deadline at the moment.Click "Add" to add a new deadline.
                         </div>
-                      </div><!-- end of column 2 -->
-                    </section>
+                        </div>
+                      <div class="row">
+                        <div class="col-sm-4">
+                          <div class="date">
+                          <p>25 <span>May</span></p>
+                          </div>
+                        </div>
+                        <div class="col-sm-7 col-sm-offset-1 container-fluid">
+                          <div class="row"><h5>Math Test</h5></div>
+                          <div class="row">
+                            <div class="col-sm-6">
+                              <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; min-width:30px;">
+                                <div class="progresslabel">Topic 1 80%</div><br>
+                              </div>
+                            </div>
+                            </div>
+                            <div class="col-sm-6">
+                              <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:10px;">
+                                <div class="progresslabel">Topic 2 80%</div><br>
+                              </div>
+                            </div>
+                            </div>
+                            </div>
+                            <div class="row">
+                              <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:10px;">
+                                <div class="progresslabel">Topic 2 80%</div><br>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
 
-                    <section class="container-fluid" id="bottom-section">
-                      <ng-include src="footer()"></ng-include>
-                    </section>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-sm-4">
+                          <div class="date">
+                          <p>25 <span>May</span></p>
+                          </div>
+                        </div>
+                        <div class="col-sm-7 col-sm-offset-1 container-fluid">
+                          <div class="row"><h5>Biology Test</h5></div>
+                          <div class="row">
+                            <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; min-width:60px;">
+                                <div class="progresslabel">Topic 1 80%</div><br>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:60px;">
+                                <div class="progresslabel">Topic 2 10%</div><br>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div><!-- end of column 2 -->
+                  </section>
+
+                  <section class="container-fluid" id="bottom-section">
+                    <ng-include src="footer()"></ng-include>
+                  </section>
+
+                  <div ak-modal="showModal" data-backdrop="static">
+                    <div>
+                      Modal text goes here.
+                      <br/>
+                      <button ng-click="showModal = false">Close</button>
+                    </div>
+                  </div>
 
