Add add new deadline functionality

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,27 +1,22 @@
-#search {
-
-}
-
-#search input[type="text"] {
-    background: url(search-white.png) no-repeat 10px 6px #fcfcfc;
+.search input[type="text"] {
+    background: url(/images/search-white.png) no-repeat 50px 40px #fcfcfc;
     border: 1px solid #d1d1d1;
-    font: bold Arial,Helvetica,Sans-serif;
     color: #bebebe;
-    width: 80%;
+    width: 20%;
     height: 34px;
-    padding: 6px 15px 6px 35px;
+    font-size: 14px;
+    padding: 6px 15px 6px 10px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     -webkit-transition: all 0.7s ease 0s;
     -moz-transition: all 0.7s ease 0s;
     -o-transition: all 0.7s ease 0s;
     transition: all 0.7s ease 0s;
     }
 
-#search input[type="text"]:focus {
-    width: 100%;
+.search input[type="text"]:focus {
+    width: 25%;
     }
 
 #top-content {
@@ -77,10 +72,6 @@
    overflow-y: scroll;
 }
 
-.popular-subject {
-    margin-bottom: 5px;
-}
-
 .progresslabel{    
     min-width:40px;
 }
@@ -134,4 +125,8 @@
   -moz-border-radius: 0 0 10px 10px;
   -webkit-border-radius: 0 0 10px 10px;
   padding: 6px 0 6px 0;
+}
+
+.progress {
+  margin-bottom: 5px;
 }
