--- a/app/views/quiz.html
+++ b/app/views/quiz.html
@@ -2,13 +2,6 @@
   <ng-include src="header()"></ng-include>
 </section>
 
-<section id="alert" ng-if="message.content != ''" style="padding-bottom: 0px">
-  <div class="alert" ng-class="'alert-' + message.status">  
-    <a class="close" ng-click="resetMessage()">×</a>  
-    {{message.content}} 
-  </div> 
-</section>
-
 <section class="container-fluid row" id="top-content">
   <div class="col-sm-9">
     <div class="row">
@@ -18,17 +11,14 @@
         </select>
       </div>
       <div class="col-sm-4">
-        <label class="switch-light well" onclick="">
-          <input type="checkbox">
-          <span>
-            <div style="font-weight: normal;">Study Mode</div>
-            <span ng-repeat="mode in modes">{{mode}}</span>
-          </span>
-
-          <a class="btn btn-success"></a>
-        </label>
+        <select class="form-control">
+          <option ng-cloak ng-repeat="mode in modes" value="{{mode}}">{{mode}}</option>
+        </select>
       </div>
       <div class="col-sm-4">
+        <form method="get" action="/search" id="search">
+          <input name="q" type="text" size="40" placeholder="Search..." />
+        </form>
       </div>
 
     </div>
@@ -39,7 +29,7 @@
 
     <div class="row" id="important-item-list">
       <div class="col-sm-12">
-        <legend class="search">
+        <legend>
           IMPORTANT ITEMS
           <!-- Standard button -->
           <button type="button" class="btn btn-default popular-subject active">All</button>
@@ -49,7 +39,6 @@
           <button type="button" class="btn btn-default popular-subject">Chemistry</button>
           <!-- Standard button -->
           <button type="button" class="btn btn-default popular-subject">Math</button>
-          <input name="q" style="margin-bottom: 10px;" type="text" placeholder="Search..." />
         </legend>
       </div>
     </div>
@@ -89,18 +78,15 @@
                   <div class="row" id="regular-item-list">
                     <div class="col-sm-12">
                       <legend>
-                        <legend class="search">
-                          REGULAR ITEMS
-                          <!-- Standard button -->
-                          <button type="button" class="btn btn-default popular-subject active">All</button>
-                          <!-- Standard button -->
-                          <button type="button" class="btn btn-default popular-subject">Biology</button>
-                          <!-- Standard button -->
-                          <button type="button" class="btn btn-default popular-subject">Chemistry</button>
-                          <!-- Standard button -->
-                          <button type="button" class="btn btn-default popular-subject">Math</button>
-                          <input name="q" style="margin-bottom: 10px;" type="text" placeholder="Search..." />
-                        </legend>
+                        REGULAR ITEMS
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject active">All</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Biology</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Chemistry</button>
+                        <!-- Standard button -->
+                        <button type="button" class="btn btn-default popular-subject">Math</button>
                       </legend>
                     </div>
                   </div>
@@ -144,27 +130,53 @@
                                   </div>
                                 </div>
                                 <div class="row" id="current-studying">
-                                  <div class="col-sm-12">
-                                  <div ng-repeat="subject in knowledgeTree" class="blockquote-box clearfix">
-                                      <div class="square pull-left" ng-bind-html="subject.representingBox">
+                                  <div class="col-sm-6">
+                                    <div class="blockquote-box clearfix">
+                                      <div class="square pull-left">
+                                        <img src="http://placehold.it/60/8e44ad/FFF&text=B" alt="" class="" />
                                       </div>
                                       <h4>
-                                        {{subject.name}}</h4>
+                                        Biology</h4>
                                         <p>
-                                          {{subject.description}}
+                                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                          ante.
                                         </p>
                                       </div>
+                                      <div class="blockquote-box blockquote-primary clearfix">
+                                        <div class="square pull-left">
+                                          <span class="glyphicon glyphicon-tint glyphicon-lg"></span>
+                                        </div>
+                                        <h4>
+                                          Chemistry</h4>
+                                          <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                            ante.
+                                          </p>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-6">
+                                        <div class="blockquote-box blockquote-info clearfix">
+                                          <div class="square pull-left">
+                                            <span class="glyphicon glyphicon-plus-sign glyphicon-lg"></span>
+                                          </div>
+                                          <h4>
+                                            Math</h4>
+                                            <p>
+                                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                              ante.
+                                            </p>
+                                          </div>
+                                        </div>
+                                      </div>
                                     </div>
-                                  </div>
-                                </div>
-                                <div class="col-sm-3" id="right-sidebar">
-                                  <div class="row" id="recommended-items-header">
-                                    <div class="col-sm-12">
-                                      <legend>
-                                        DEADLINES <div class="btn btn-info" ng-click="showAModal()">Add <span class="glyphicon glyphicon-plus"></span></div>
-                                      </legend>
-                                    </div>
-                                  </div>
+                                    <div class="col-sm-3" id="right-sidebar">
+                                      <div class="row" id="recommended-items-header">
+                                        <div class="col-sm-12">
+                                          <legend>
+                                            DEADLINES <button class="btn btn-info" ng-click="showModal = true">Add <span class="glyphicon glyphicon-plus"></span></button>
+                                          </legend>
+                                        </div>
+                                      </div>
                         <!--
                         <div>
                           <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
@@ -172,43 +184,80 @@
                       -->
 
                       <div class="row">
-                        <div class="col-sm-12" ng-if="deadlines.length === 0">
+                        <div class="col-sm-12">
                           You have no deadline at the moment.Click "Add" to add a new deadline.
-                          <span am-time-ago="message.time"></span>
                         </div>
-                      </div>
-                      <div class="row" data-ng-repeat-start="d in deadlines">
+                        </div>
+                      <div class="row">
                         <div class="col-sm-4">
                           <div class="date">
-                            <p>{{day(d.date)}} <span>{{month(d.date)}}</span></p>
+                          <p>25 <span>May</span></p>
                           </div>
                         </div>
                         <div class="col-sm-7 col-sm-offset-1 container-fluid">
-                          <div class="row"><div class="col-sm-12"><h5>{{d.name}}</h5></div></div>
+                          <div class="row"><h5>Math Test</h5></div>
                           <div class="row">
-                            <div class="col-sm-6" data-ng-repeat="topic in d.topics">
+                            <div class="col-sm-6">
                               <div class="progress" style="display: inline-block">
-                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; min-width:30px;">
-                                  <div class="progresslabel">{{topic.name}} 80%</div><br>
-                                </div>
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; min-width:30px;">
+                                <div class="progresslabel">Topic 1 80%</div><br>
+                              </div>
+                            </div>
+                            </div>
+                            <div class="col-sm-6">
+                              <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:10px;">
+                                <div class="progresslabel">Topic 2 80%</div><br>
+                              </div>
+                            </div>
+                            </div>
+                            </div>
+                            <div class="row">
+                              <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:10px;">
+                                <div class="progresslabel">Topic 2 80%</div><br>
                               </div>
                             </div>
                           </div>
                         </div>
+
                       </div>
-                      <div class="row" data-ng-repeat-end="">
-                        <div class="col-sm-12">
-                          <label>Target</label>
-                          <div class="progress">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:10px;">
-                              <div class="progresslabel">10%</div><br>
+
+                      <div class="row">
+                        <div class="col-sm-4">
+                          <div class="date">
+                          <p>25 <span>May</span></p>
+                          </div>
+                        </div>
+                        <div class="col-sm-7 col-sm-offset-1 container-fluid">
+                          <div class="row"><h5>Biology Test</h5></div>
+                          <div class="row">
+                            <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; min-width:60px;">
+                                <div class="progresslabel">Topic 1 80%</div><br>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="progress" style="display: 1inline-block">
+                              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%; min-width:60px;">
+                                <div class="progresslabel">Topic 2 10%</div><br>
+                              </div>
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </section>
+                    </div><!-- end of column 2 -->
+                  </section>
 
-                    <section class="container-fluid" id="bottom-section">
-                      <ng-include src="footer()"></ng-include>
-                    </section>
+                  <section class="container-fluid" id="bottom-section">
+                    <ng-include src="footer()"></ng-include>
+                  </section>
+
+                  <div ak-modal="showModal" data-backdrop="static">
+                    <div>
+                      Modal text goes here.
+                      <br/>
+                      <button ng-click="showModal = false">Close</button>
+                    </div>
+                  </div>
 
