--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -3,6 +3,7 @@
     border: 1px solid #d1d1d1;
     color: #bebebe;
     width: 20%;
+    min-width: 90px;
     height: 34px;
     font-size: 14px;
     padding: 6px 15px 6px 10px;
@@ -17,7 +18,8 @@
 
 .search input[type="text"]:focus {
     width: 25%;
-    }
+    min-width: 120px;
+    }o
 
 #top-content {
     padding: 50px;
@@ -26,9 +28,11 @@
 #top-content > div >.row {
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-#top-content > div >.row > .jumbotron {
+#top-content .jumbotron {
     height: 200px;
     margin-bottom: 0px;
 }
@@ -64,12 +68,21 @@
   font-size: 10pt;
 }
 
-#right-sidebar {
-    padding-left: 50px;
-}
-
 #right-sidebar:hover{
    overflow-y: scroll;
+}
+
+#right-sidebar p {
+  font-size: 12px;
+  color: rgb(153, 153, 153);
+}
+
+#right-sidebar legend {
+  margin-bottom: 0px;
+}
+
+.recommended-item h6.unit-name {
+  margin-top: 0px;
 }
 
 .progresslabel{    
