--- a/app/views/newdeadline.html
+++ b/app/views/newdeadline.html
@@ -12,17 +12,17 @@
         <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-              <input type="text" ng-model="formSubmit.required" validator="[requiredSubmit]" class="form-control" id="name" placeholder="Required" ng-model="deadline.name">
+              <input type="text" ng-model="formWatch.name" validator="[required, requireSubmit]" class="form-control" id="name" placeholder="Required">
             </div>
           </div>
           <div class="form-group">
-            <label for="name" class="col-sm-2 control-label">Date</label>
+            <label for="date" class="col-sm-2 control-label">Date</label>
             <div class="col-sm-10">
-              <input type="date" class="form-control" id="date" ng-model="deadline.date">
+              <input type="date" ng-model="formWatch.date" validator="[required, requiredSubmit]" class="form-control" id="date" ng-model="deadline.date">
             </div>
           </div>
           <div class="form-group">
-            <label for="age" class="col-sm-2 control-label">Topics</label>
+            <label for="topics" class="col-sm-2 control-label">Topics</label>
             <div class="col-sm-10">
               <div class="container-fluid">
                 <multi-select ng-model="deadline.topics" available="topics" selected-label="Selected topics" available-label="Available topics" display-attr="name"></multi-select>
@@ -33,7 +33,8 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" ng-click="close('Yes')" class="btn btn-success" data-dismiss="modal">Proceed to Test Quiz</button>
+        <input type="submit" ng-click="formWatch.submit()" class="btn btn-success">
+        <input type="button" ng-click="formWatch.reset()" class="btn btn-default" value="Reset"/>
         <button type="button" ng-click="close('No')" class="btn" data-dismiss="modal">Cancel</button>
       </div>
     </div>
