--- a/app/views/newdeadline.html
+++ b/app/views/newdeadline.html
@@ -33,7 +33,7 @@
 
       </div>
       <div class="modal-footer">
-        <input type="submit" ng-click="formWatch.submit()" class="btn btn-success">
+        <input type="submit" ng-click="formWatch.submit()" class="btn btn-success" value="Take diagnostic quiz">
         <input type="button" ng-click="formWatch.reset()" class="btn btn-default" value="Reset"/>
         <button type="button" ng-click="close('No')" class="btn" data-dismiss="modal">Cancel</button>
       </div>
