--- a/app/views/subtopic.html
+++ b/app/views/subtopic.html
@@ -13,16 +13,16 @@
         </div>
         <div class="list-group">
           <span href="#" class="list-group-item active">
-            <h5 data-ng-cloak>{{subject.name}}</h5>
+            <h5 data-ng-cloak>{{subTopic.name}}</h5>
           </span>
           <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}">
-            <i class="fa fa-mortar-board"></i> Lectures <span class="badge" data-ng-model="numberOfSubTopics" data-ng-bind="numberOfSubTopics()"></span>
+            <i class="fa fa-mortar-board"></i> Lectures <span class="badge" ng-model="numberOfSubTopics" data-ng-bind="numberOfSubTopics()"></span>
           </a>
           <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}/quizzes">
-            <i class="fa fa-question"></i> Quizzes <span class="badge" data-ng-model="numberOfQuizzes" data-ng-bind="numberOfQuizzes()"></span>
+            <i class="fa fa-question"></i> Quizzes <span class="badge">14</span>
           </a>
           <a href="/#/home" class="list-group-item">
-            <i class="fa fa-long-arrow-left"></i> Main Page
+            <i class="fa fa-long-arrow-left"></i> {{subject.name}}
           </a>
         </div>        
       </div>
@@ -41,7 +41,8 @@
       <div class="col-sm-12">
         <div id="bc1" class="btn-group btn-breadcrumb">
           <a href="#/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
-          <a class="btn btn-default" data-ng-href="#/subject/{{subject.id}}"><div data-ng-bind="subject.name"></div></a>
+          <a data-ng-href="#/subject/{{subject.id}}" class="btn btn-default" data-ng-bind="subject.name"><div></div></a>
+          <a data-ng-href="#/subtopic/{{subTopic.id}}" data-ng-bind="subTopic.name" class="btn btn-default"><div></div></a>
         </div>
       </div>
     </div>
@@ -50,26 +51,19 @@
         <div class="container-fluid" style="margin-top: 15px;">
           <div class="panel panel-default">
             <div class="panel-heading">
-            <h1 class="panel-title" data-ng-bind="subject.name" data-ng-cloak> </h1> 
+              <h1 class="panel-title" data-ng-cloak>{{quiz.title}} </h1> 
             </div>
-            <div class="panel-body" id="quiz-panel">
-              <legend>DESCRIPTION</legend>
-              <p data-ng-bind="subject.description"></p>
-              <legend>CONTENT</legend>
-              <div style="overflow-y: scroll; overflow-x: hidden;">
-                <ul class="nav nav-list">
-                  <li data-ng-repeat-start="topic in subject.topics"><label class="tree-toggler nav-header" ng-bind="topic.name"></label>
-                    <ul class="nav nav-list tree">
-                      <li data-ng-repeat="subTopic in topic.subTopics"><label class="tree-toggler nav-header" ng-bind="getSubTopicBySubTopicId(subTopic.id).name"></label>
-                        <ul class="nav nav-list tree">
-                          <li><a data-ng-href="#/subtopic/{{subTopic.id}}">Slide</a></li>
-                          <li><a data-ng-href="#/quiz/{{getQuizBySubTopicId(subTopic.id).id}}">Quiz</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="divider" data-ng-repeat-end></li>
-                </ul>
+            <div class="panel-body">
+              <ng-pdf template-url="views/viewer.html"></ng-pdf>
+            </div>
+
+            <div class="panel-footer clearfix">
+              <div class="pull-right">
+                <button class="btn btn-default" ng-click="zoomIn()">+</span></button>
+                <button class="btn btn-default" ng-click="zoomOut()">-</span></button>
+                <span>Page: </span><input class="page-num" type="text" min=1 ng-model="pageNum"><span> / {{pageCount}}</span>
+                <button class="btn btn-default" ng-click="goPrevious()">Previous</span></button>
+                <button class="btn btn-default" ng-click="goNext()">Next</span></button>
               </div>
             </div>
           </div>
